# unitrain

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml  run.sh
.github/: copilot-instructions.md
cli/: __init__.py  eval.py  export.py  predict.py  train.py
configs/: README.md  example.yaml  jn_train.yaml  jn_yolo.yaml  predict_weights.yaml  rfdetr_test.yaml  yolo_test.yaml
envs/: rfdetr.txt  ultralytics.txt
unitrain/: __init__.py  config_gen.py  data_converter.py  eval_report.py  utils.py
unitrain/runners/: __init__.py  base.py  rfdetr.py  ultralytics.py
unitrain/runners/_scripts/: __init__.py  rfdetr_eval.py  rfdetr_export.py  rfdetr_predict.py  rfdetr_train.py  weight_utils.py  yolo_eval.py  yolo_export.py  yolo_predict.py  yolo_train.py
